# Modern-computer-networks-mipt-2025

./: README.md
Tasks/Hw1/: README.md  spoof_attack.py
Tasks/Hw3/: README.md  client.py  docker-compose.yaml  example.ipynb  message_protocol.py  server.py
Tasks/Hw3/net_dump/: Сетевая запись.pcapng
Tasks/Hw4/: README.md  http_filter.py  rules.conf
Tasks/Hw5/: README.md  ca.crt  generate_certificates.py  network_app.py  server.key  tcp_communication.py  tls_traffic.pcap
Tasks/Hw6/: .gitignore  .gitlab-ci.yml  README.md  acme_test.py  pyproject.toml  ruff.toml
Tasks/Hw6/acme/: Dockerfile  app.py
Tasks/Hw6/acme/ca_certs/: intermediate_ca.crt  intermediate_ca.key  root_ca.crt  root_ca.key
Tasks/Hw6/acme/data/: certificates.json
